# blocksecops-cli

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
hooks/: pre-commit-hook.sh
ide_integrations/intellij/: BlockSecOpsAction.java  BlockSecOpsInspection.java  plugin.xml
ide_integrations/sublime/: BlockSecOps.py  BlockSecOps.sublime-settings  Default.sublime-commands
ide_integrations/vim/: blocksecops.vim
ide_integrations/vim/lua/: blocksecops.lua
ide_integrations/vscode/: package.json
ide_integrations/vscode/src/: configuration.ts  diagnostics.ts  extension.ts  scanService.ts
src/blocksecops_cli/: __init__.py  __main__.py  config.py  main.py
src/blocksecops_cli/api/: __init__.py  client.py  models.py
src/blocksecops_cli/commands/: __init__.py  auth.py  scan.py
src/blocksecops_cli/formatters/: __init__.py  base.py  json_formatter.py  junit_formatter.py  sarif_formatter.py  table_formatter.py
src/blocksecops_cli/scanner/: __init__.py  downloader.py  soliditydefend.py
