[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blocksecops-cli"
version = "0.1.0"
description = "CLI tool for BlockSecOps smart contract security scanning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "BlockSecOps Team", email = "support@blocksecops.com" }
]
keywords = ["blockchain", "security", "smart-contracts", "solidity", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
blocksecops = "blocksecops_cli.main:cli"

[project.urls]
Homepage = "https://blocksecops.com"
Documentation = "https://docs.blocksecops.com/cli"
Repository = "https://github.com/blocksecops/blocksecops-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/blocksecops_cli"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
